<resources>
    <string name="app_name">BTMAP</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic21hbGxraW5zIiwiYSI6ImNrbDh2bTZvbzBnNHEybmxidjZjZnR6ajMifQ.kh8o8wr2sLxpy027q-_W6w</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_map">Map</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About Us</string>
    <string name="menu_commute">Commutes</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_updateProfile">Update Profile</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="google_login_btn">Sign In With Google</string>
    <string name="phone_login_btn">Sign In With Phone</string>

<<<<<<< HEAD
    <string name="rideshare_app"><b>BTMAP: Rideshare App</b> is a mobile application designed to allow for users to share a commute in an attempt to reduce vehicular traffic. </string>
=======
    <string name="rideshare_app"><b>BTMAP: Rideshare App</b> is a mobile application designed to allow for users to share a commute in an attempt to reduce vehicular traffic, </string>
>>>>>>> 205e1c5ae536bde12fd6731b514ccf2f77b2cc09
    <string name="why_prof_photo">A profile picture is necessary to allow drivers and passengers alike to have an idea of what the other person looks like before they enter the vehicle.</string>
    <string name="contact_us">Questions, queries or comments?</string>
    <string name="contact_us_link"><b><i>Contact Us</i></b></string>

</resources>