<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_commute"
                android:icon="@drawable/ic_commute"
                android:title="@string/menu_commute" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/person"
                android:title="@string/menu_about" />
        </menu>
    </item>

<!--    <item android:title="Navigation">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_map"-->
<!--                android:icon="@drawable/ic_map"-->
<!--                android:title="@string/menu_map" />-->
<!--            <item-->
<!--                android:id="@+id/nav_test"-->
<!--                android:icon="@drawable/ic_test"-->
<!--                android:title="@string/menu_test" />-->
<!--        </menu>-->
<!--    </item>-->

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/person"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/action_logout" />
        </menu>
    </item>
</menu>