<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.uwi.btmap.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_commute"
        android:name="com.uwi.btmap.ui.CommuteList.CommuteListFragment"
        android:label="@string/menu_commute"
<<<<<<< HEAD
        tools:layout="@layout/fragment_commute_list" >
=======
        tools:layout="@layout/commute_list_fragment" >
>>>>>>> 205e1c5ae536bde12fd6731b514ccf2f77b2cc09
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.uwi.btmap.ui.AboutUs.AboutUsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about_us" >
    </fragment>



</navigation>